# cargo

./: Dockerfile  alembic.ini  config.py  docker-compose-docker.yaml  docker-compose-local.yaml  docker-compose.yml  main.py  pyproject.toml  readme.md  start.sh  start_app.sh
alembic/: env.py
alembic/versions/: 2024_12_01_2220-17890e19061a_added_table_rates.py  2024_12_02_0015-bf9794caeffc_add_date_of_action_to_rate.py  2024_12_02_0113-e3a935dd898a_not_unique_title_in_rate.py
app/: __init__.py
app/api/: __init__.py  cargo.py
app/dao/: rates.py
app/models/: __init__.py  rate.py  rates.py
app/schemas/: rates.py
app/utils/: kafka_logs.py
