[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.115.5"
pydantic-settings = "^2.6.1"
uvicorn = {extras = ["standart"], version = "^0.32.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

